--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,12 @@
     "ionic": "driftyco/ionic-bower#1.1.0"
   },
   "dependencies": {
-    "ngstorage": "~0.3.9"
+    "ngstorage": "~0.3.9",
+    "ionic-wizard": "~1.0.6",
+    "ejs": "~1.0.0",
+    "angular-resource": "~1.4.7"
+  },
+  "resolutions": {
+    "angular": "1.4.3"
   }
 }
