--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "ngstorage": "~0.3.9",
     "ionic-wizard": "~1.0.6",
     "ejs": "~1.0.0",
-    "angular-resource": "~1.4.7"
+    "angular-resource": "~1.4.7",
+    "ngCordova": "~0.1.23-alpha"
   },
   "resolutions": {
     "angular": "1.4.3"
